# sacre_dieu

./: .gitignore  Cargo.toml  Makefile  README.md  backup_config.json  config.json  sacre_dieu  sprt.sh  stash-bot
bitboards/: bishop.rs  king.txt  knight.txt  rook.rs  white_pawn.txt
consts/: lmr.rs
fenmaker/: _reproducer.py  fenmaker.py  reproducer.py
releases/: v10_history_heuristic  v10_tt_cutoffs  v11_fixed_history_heuristic  v11_fixed_tt_move  v12_history_heuristic  v12_killer_moves  v13_see  v1_basic  v2_move_ordering  v2_mvv_lva  v3_psqt  v4_qsearch  v5_qsearch_ext  v6_tuned_psqt  v7_fail_soft  v8_draw_score  v9_tt_move_ordering
sprt/: cutechess_sprt.sh  debug.sh  elo_tester.sh  pgnout.txt  sprt.sh
src/: main.rs  uci.rs
src/engine/: board.rs  consts.rs  eval.rs  mod.rs  search.rs
src/state/: board.rs  consts.rs  mod.rs  piece.rs
src/utils/: board.rs  consts.rs  mod.rs  piece.rs  piece_move.rs  transposition_table.rs  zobrist.rs
