[package]
name = "matrix_mate"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.17.0", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = "1.0.208"
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"

[build]
rust-analyzer.exclude = ["bitboards/*"]
